add：github.io：index.html。

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-天地玄黄，宇宙洪荒。
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>DRLHC</title>
+</head>
+<body>
+<p>我的第一个段落。</p>
+<img src="/images/test.jpg" alt="some_text">
+</body>
+</html>
