--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p>我的第一个段落。</p>
-<img src="/images/test.jpg" alt="some_text">
+<img src="https://lianghchao.github.io/images/test.jpg" alt="some_text">
 </body>
 </html>
