add：github.io：尝试vuecli。

--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>DRLHC</title>
-</head>
-<body>
-<p>我的第一个段落。</p>
-<img src="https://lianghchao.github.io/images/test.jpg" alt="some_text">
-</body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>demoeditor</title><script defer="defer" src="/js/chunk-vendors.a023036f.js"></script><script defer="defer" src="/js/app.d004dd2c.js"></script><link href="/css/chunk-vendors.ce142015.css" rel="stylesheet"><link href="/css/app.b2d625b8.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but demoeditor doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
