--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>菜单</title>
+    <title>Root</title>
 </head>
 <body>
 <a href="/dist/">WangEditor</a>
