add：github.io：尝试使用网页路径解决js无法识别问题。

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Root</title>
 </head>
 <body>
-<a href="/dist/">WangEditor</a>
+<a href="https://lianghchao.github.io/dist/">WangEditor</a>
 
 </body>
 </html>
