add：github.io：要使用相对路径。

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div class="about">
     <div class="header">
         <div class="lnner-header">
-            <h1 onclick="window.location.href='https://lianghchao.github.io/dist/'">This is an about page</h1>
+            <h1 onclick="window.location.href='https://lianghchao.github.io/dist/'">wangEditor</h1>
         </div>
         <div>
             <svg class="waves" viewBox="0 24 150 28"
