add：github.io：网站图标。

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Root</title>
+    <link rel="icon" href="images/dr.ico">
 </head>
 <body>
 <div class="about">
