--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>hello_web</title><script defer="defer" src="js/chunk-vendors.95ebf99d.js"></script><script defer="defer" src="js/app.9561e613.js"></script><link href="css/app.4d6e1b6c.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but hello_web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!doctype html>
+<html lang="">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="favicon.ico">
+    <title>hello_web</title>
+    <script defer="defer" src="js/chunk-vendors.95ebf99d.js"></script>
+    <script defer="defer" src="js/app.9561e613.js"></script>
+    <link href="css/app.4d6e1b6c.css" rel="stylesheet">
+</head>
+<body>
+<noscript><strong>We're sorry but hello_web doesn't work properly without JavaScript enabled. Please enable it to
+    continue.</strong></noscript>
+<div id="app"></div>
+</body>
+</html>
